--- a/media/bootstrap/_sass/_variables.scss
+++ b/media/bootstrap/_sass/_variables.scss
@@ -8,3 +8,9 @@ $font-family-base: 'Rosario', sans-serif;
 
 $nav-link-hover-bg: #464646;
 $nav-open-link-hover-color: #000000;
+
+$modal-content-bg: #000000;
+
+$close-color: #ffffff;
+
+$modal-header-border-color: #212121;
