--- a/media/bootstrap/_sass/style.scss
+++ b/media/bootstrap/_sass/style.scss
@@ -6,10 +6,12 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  min-height: 100%;
 }
 
 body {
 	background: url(../../images/body.png) left repeat-y;
+	min-height: 100%;
 }
 
 .name {
@@ -18,11 +20,20 @@ body {
 	font-family: 'Marck Script', cursive;
 	font-size: 400%;
 	position: fixed;
+
+	a {
+		color: #f0962c;
+		text-decoration: none;
+	}
+
+	a:hover {
+		text-decoration: underline;
+	}
 }
 
 .bio-image {
 	height: 235px;
-	margin: 30px 0px 0px 75px;
+	margin: 30px 0px 0px 125px;
 	width: 269px;
 
 	img {
@@ -114,8 +125,10 @@ body {
 		border-radius: 0px;
 }
 
-.content {
-	margin-top: 100px;
+@media screen and (min-width: 992px) {
+  .content {
+		margin-top: 100px;
+	}
 }
 
 .post {
@@ -129,7 +142,7 @@ body {
 
 	img {
 		float: left;
-		margin-right: 8px;
+		margin: 0px 8px 8px 0px;
 	}
 
 	a {
@@ -157,9 +170,31 @@ body {
 	position: fixed;
 }
 
+.modal-title, .modal-body {
+	color: #e7e7e7;
+}
+
+.modal-phone {
+	letter-spacing: 1px;
+	text-align: center;
+}
+
+.modal-content {
+	opacity: 0.75;
+}
+
 footer {
 	font-size: 11px;
 	height: 40px;
-	margin-top: 50px;
+	margin-top: 100px;
 	text-align: center;
+
+	a {
+		color: #555555;
+		text-decoration: underline;
+	}
+
+	a:hover {
+		color: #000;
+	}
 }
