Update per wunderlist line items to fix mobile responsive

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Marck+Script' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" media="all" href="/media/bootstrap/css/style.css" />
+	<link rel="stylesheet" media="all" href="/media/css/style.css" />
 </head>
 
 <body>
