--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -7,7 +7,7 @@
           <h4 class="modal-title">My Digits</h4>
         </div>
         <div class="modal-body modal-phone">
-          <h2>(210) 595-0499</h2>
+          <h2><a href="tel:210-595-0499">(210) 595-0499</a></h2>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
