--- a/media/bootstrap/_sass/style.scss
+++ b/media/bootstrap/_sass/style.scss
@@ -1,18 +1,17 @@
-@import 'variables', 'bootstrap/bootstrap';
+@import 'variables', 'bootstrap/bootstrap', 'mobile';
 
 html {
-	background: #f0f0f0 url(../../images/background.jpg) no-repeat center center fixed;
+	background: #4b82a8 url(../images/background.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  min-height: 100%;
+  height: 100%;
 }
 
-body {
-	background: url(../../images/body.png) left repeat-y;
-	min-height: 100%;
-}
+/*body {
+	background: url(../images/body.png) left repeat-y;
+}*/
 
 .name {
 	margin-left: 50px;
@@ -55,7 +54,7 @@ body {
 
 	li a {
 		background-color: #9babb5;
-		background-image: url(../../images/sprite.png);
+		background-image: url(../images/sprite.png);
 		display: block;
 		/*float: left;*/
 		height: 32px;
@@ -125,19 +124,12 @@ body {
 		border-radius: 0px;
 }
 
-@media screen and (min-width: 992px) {
-  .content {
-		margin-top: 100px;
-	}
-}
-
 .post {
 	border-collapse: collapse;
 	border-bottom: 1px dashed #eea20e;
 	color: #ffffff;
 	margin-bottom: 20px;
 	min-height: 275px;
-	padding: 0px 150px 0px 0px;
 	letter-spacing: 1px;
 
 	img {
@@ -177,20 +169,35 @@ body {
 .modal-phone {
 	letter-spacing: 1px;
 	text-align: center;
+
+	a {
+		color: #fff;
+		text-decoration: none;
+	}
+
+	a:hover {
+		text-decoration: underline;
+	}
 }
 
 .modal-content {
 	opacity: 0.75;
 }
 
+.post-margin {
+	/*margin-bottom: 200px;*/
+}
+
 footer {
+	bottom: 0;
+	color: #bebebe;
 	font-size: 11px;
 	height: 40px;
 	margin-top: 100px;
 	text-align: center;
 
 	a {
-		color: #555555;
+		color: #cecece;
 		text-decoration: underline;
 	}
 
