--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,8 @@
 			<div class="col-md-8 col-md-offset-4">
 
 				<div role="main" class="content">
-					{{content}}
+					<h2>{{ page.title }}</h2>
+					{{ content }}
 				</div>
 			
 			</div>
