--- a/media/bootstrap/_sass/_mobile.scss
+++ b/media/bootstrap/_sass/_mobile.scss
@@ -7,12 +7,13 @@
 	
   .content {
 		margin-top: 100px;
+		padding-right: 150px;
 	}
-
+/*
 	.post {
 		padding: 0px 150px 0px 0px;
 	}
-
+*/
 }
 
 @media all and (max-width: 991px) {
