--- a/media/bootstrap/_sass/style.scss
+++ b/media/bootstrap/_sass/style.scss
@@ -124,10 +124,13 @@ html {
 		border-radius: 0px;
 }
 
+.content {
+	color: #ffffff;
+}
+
 .post {
 	border-collapse: collapse;
 	border-bottom: 1px dashed #eea20e;
-	color: #ffffff;
 	margin-bottom: 20px;
 	min-height: 275px;
 	letter-spacing: 1px;
