--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,1 +1,1 @@
-<li><a href="http://work.icastwork.com/pdf/Isaac-Castillo-Resume.pdf">Resume</a></li>
+<li><a href="/media/pdf/Isaac-Castillo-Resume.pdf">Resume</a></li>
