Fix jquery slide plugin

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,10 +37,10 @@
 						<div class="clearfix hidden-md hidden-lg"></div>
 						{{ content }}
 						{% if page.link1_title %}
-							<p><a href="{{post.link1_url}}" targe="_blank">{{page.link1_title}}</a></p>
+							<p><a href="{{page.link1_url}}" targe="_blank">{{page.link1_title}}</a></p>
 						{% endif %}
 						{% if page.link2_title %}
-							<p><a href="{{post.link2_url}}" targe="_blank">{{page.link2_title}}</a></p>
+							<p><a href="{{page.link2_url}}" targe="_blank">{{page.link2_title}}</a></p>
 						{% endif %}
 					</p>
 					</div>
