Change page link color

--- a/media/bootstrap/_sass/style.scss
+++ b/media/bootstrap/_sass/style.scss
@@ -126,6 +126,16 @@ html {
 
 .content {
 	color: #ffffff;
+
+	a {
+		color: #9cd7ff;
+		text-decoration: underline
+	}
+
+	a:hover {
+		color: #1c6494;
+		text-decoration: none;
+	}
 }
 
 .post {
