--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@
 					<div class="post">
 						<h2>{{ page.title }}</h2>
 						<p>
-							<img src="/media/images/posts/{{ page.featured_image }}.jpg" width="225" class="left">
+							<img src="/media/images/posts/{{ page.featured_image }}.jpg" class="img-responsive img-thumbnail" width="225" class="left">
 							<div class="clearfix hidden-md hidden-lg"></div>
 							{{ content }}
 							{% if page.link1_title %}
