--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,8 +13,8 @@
 	<![endif]-->
 
 	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Marck+Script' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" media="all" href="/media/css/style.css" />
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 
 <body>
