--- a/_includes/mobile-nav.html
+++ b/_includes/mobile-nav.html
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Isaac Castillo</a>
+    <a class="navbar-brand" href="/">Isaac Castillo (Full Stack Web Dev)</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
