--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,6 @@
 	<meta charset="utf-8">
 	<title>{{site.name}}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="description here" />
 	<meta name="author" content="Isaac Castillo">
 
 	<!--[if lt IE 9]>
@@ -14,14 +13,14 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" media="all" href="/media/css/style.css" />
-  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 
 <body>
 
 	{% include mobile-nav.html %}
 
-	<h1 class="name visible-md visible-lg"><a href="/">Isaac Castillo</a></h1>
+  <h1 class="name visible-md visible-lg"><a href="/">Isaac Castillo</a></h1>
+  <h2 class="position-title visible-md visible-lg">Full Stack Web Developer</h2>
 
 		<div class="row">
 			
@@ -53,5 +52,6 @@
 	    })
 		})();
 	</script>
+	{% include analytics.html %}
 </body>
 </html>
