--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<footer>&copy; 2014 Isaac Castillo | built with: <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://getbootstrap.com/">Twitter Bootstrap</a>, <a href="http://sass-lang.com/">Sass</a>. Hosted on <a href="https://github.com/">Github</a>.</footer>
+<footer>&copy; {{ site.time | date: '%Y' }} {{ site.data.personal.owner_name }} | built with: <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://getbootstrap.com/">Twitter Bootstrap</a>, <a href="http://sass-lang.com/">Sass</a>. Hosted on <a href="https://github.com/">Github</a>.</footer>
