--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -7,7 +7,7 @@
           <h4 class="modal-title">My Digits</h4>
         </div>
         <div class="modal-body modal-phone">
-          <h2><a href="tel:210-595-0499">(210) 595-0499</a></h2>
+          <h2><a href="tel:{{ site.data.personal.phone }}">{{ site.data.personal.phone }}</a></h2>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -25,13 +25,7 @@
           <h4 class="modal-title">About Me</h4>
         </div>
         <div class="modal-body">
-          <p>I have been doing design, web design and web development work for over
-          10 years. I enjoy writing, creating and debugging code. I get a
-          satisfaction when all the pieces of a development project come together.
-          I have worked with various technologies and languages; Kohana framework,
-          PHP, MySQL, CSS, Sass, Capistrano, Git and Wordpress just to name a few.
-          My current lamp development environment is Laravel (php MVC framework) on a
-          vagrant virtual box.</p>
+          <p>{{ site.data.personal.bio }}</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
