--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,10 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>{{site.name}}</title>
+	<title>{{ page.title }}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="Isaac Castillo">
+	<meta name="author" content="{{ site.data.personal.owner_name }}">
+	<meta name="description" content="{{ page.excerpt }}">
 
 	<!--[if lt IE 9]>
 	<script src="js/html5shiv.js"></script>
@@ -19,8 +20,8 @@
 
 	{% include mobile-nav.html %}
 
-  <h1 class="name visible-md visible-lg"><a href="/">Isaac Castillo</a></h1>
-  <h2 class="position-title visible-md visible-lg">Full Stack Web Developer</h2>
+  <h1 class="name visible-md visible-lg"><a href="/">{{ site.data.personal.owner_name }}</a></h1>
+  <h2 class="position-title visible-md visible-lg">{{ site.data.personal.position }}</h2>
 
 		<div class="row">
 			
