fixing links to connect again after domain change

--- a/_includes/mobile-nav.html
+++ b/_includes/mobile-nav.html
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">{{ site.data.personal.ower_name }} ({{ site.data.personal.position }})</a>
+    <a class="navbar-brand" href="/">{{ site.data.personal.owner_name }} ({{ site.data.personal.position }})</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
