--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,30 +20,46 @@
 	{% include analytics.html %}
 	{% include mobile-nav.html %}
 
-  <h1 class="name visible-md visible-lg"><a href="/">{{ site.data.personal.owner_name }}</a></h1>
-  <h2 class="position-title visible-md visible-lg">{{ site.data.personal.position }}</h2>
+	<div class="container-fluid">
 
-		<div class="row">
-			
-			{% include bio.html %}
+	  	<h1 class="name visible-md visible-lg"><a href="/">{{ site.data.personal.owner_name }}</a></h1>
+	  	<h2 class="position-title visible-md visible-lg">{{ site.data.personal.position }}</h2>
 
-			<div class="col-md-8 col-md-offset-4">
+			<div class="row">
 
-				<div role="main" class="content">
-					<h2>{{ page.title }}</h2>
-					{{ content }}
+				<div class="col-md-4 nav-area visible-md visible-lg">
+					<div class="bio-image">
+						<img src="/media/images/isaac.jpg" class="img-rounded img-responsive" />
+						<ul class="nav nav-pills nav-stacked bio-nav">
+							{% include bio-nav.html %}
+						</ul>
+					</div>
+					<div class="clearfix"></div>
+					<nav>
+						<ul class="nav nav-pills nav-stacked main-nav">
+							{% include nav.html %}
+						</ul>
+					</nav>
 				</div>
-			
+
+				<div class="col-md-8 col-md-offset-4">
+
+					<div role="main" class="content">
+						<h2>{{ page.title }}</h2>
+						{{ content }}
+					</div>
+				
+				</div>
+
 			</div>
 
-		</div>
+		{% include footer.html %}
 
-	{% include footer.html %}
-
-	{% include modals.html %}
+		{% include modals.html %}
+	</div>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="/media/bootstrap/javascripts/bootstrap.min.js"></script>
+	<script src="/vendor/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
 	<script>
 		(function() {
 			$('.bio-nav').tooltip({
