--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,2 +1,3 @@
 <li><a href="/resume/">Resume</a></li>
-<li><a href="http://www.echods.com">My Other Work</a></li>
+<!-- <li><a href="http://courses.icemancast.com">Courses/Tutorials</a></li> -->
+<li><a href="http://www.echods.com">My Business</a></li>
