removed some posts til fixed added nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,4 @@
-<li><a href="http://gettingstarted.tv">GettingStarted.tv (courses)</a></li> 
+<li><a href="http://gettingstarted.tv">My Courses</a></li>
+<li><a href="https://www.youtube.com/user/icemancast/videos">My Tutorials</a></li>
 <li><a href="http://echods.com">My Business</a></li>
 <li><a href="/resume/">Resume</a></li>
