--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="{{ site.data.personal.owner_name }}">
 	<meta name="description" content="{{ page.excerpt }}">
+    {% feed_meta %}
 
 	<!--[if lt IE 9]>
 	<script src="js/html5shiv.js"></script>
@@ -26,7 +27,7 @@
 		<h2 class="position-title visible-md visible-lg">{{ site.data.personal.position }}</h2>
 
 			<div class="row">
-				
+
 				{% include bio.html %}
 
 				<div class="col-md-8 col-md-offset-4">
@@ -65,7 +66,7 @@
 							})();
 						</script>
 						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-					</div>				
+					</div>
 				</div>
 
 			</div>
